Added auth, register, login and getting info about user
