# back/internal/storage/database/entitities.go
@@ -10,6 +10,10 @@ type GetUserDTO struct {
 	Id string `json:"id"`
 }
 
+type GetUserByUsernameDTO struct {
+	Username string `json:"username"`
+}
+
 type CreateVideoDTO struct {
 	Name        string `json:"name"`
 	Description string `json:"description"`
@@ -34,6 +38,13 @@ type CreateUserReturn struct {
 type GetUserReturn struct {
 	Username string `json:"username"`
 	Email    string `json:"email"`
+}
+
+type GetUserByUsernameReturn struct {
+	Id       string `json:"id"`
+	Username string `json:"username"`
+	Email    string `json:"email"`
+	Password string `json:"password"`
 }
 
 type CreateVideoReturn struct {
